--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "postcss": "^8.1.14"
     },
     "dependencies": {
+        "jautocalc": "^1.4.2",
         "tailwindcss": "^2.2.17"
     }
 }
