--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     },
     "dependencies": {
         "jautocalc": "^1.4.2",
-        "tailwindcss": "^2.2.17"
+        "tailwindcss": "^2.2.17",
+        "vue": "^2.6.14"
     }
 }
